--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /*
-Author: Maria Cruz
+Author: Ally Hammond
 Date: Current Date
 File Name: styles.css
 */
@@ -139,4 +139,82 @@ footer {
 footer a {
     color: #f6eee4;
     text-decoration: none;
+}
+
+/*Media Query for Tablet Viewport*/
+@media screen and (min-width:620px), print {
+    
+/*Tablet viewport: Show tab-desk class, hide mobile class*/
+    .tablet-desktop {
+        display: block;
+    }
+    
+    .mobile {
+        display: none;
+    }
+    
+/*Tablet Viewport: Style rules for nav area*/
+    nav li {
+         border-top: none;
+        display: inline-block;
+        font-size: 1.25em;
+    }
+    
+    nav li a {
+        padding: 0.5em;
+    }
+}
+
+/*Media Query for Desktop Viewport*/
+@media screen and (min-width:1000px), print {
+    
+/* Desktop Viewport: Style rules for nav area*/
+    nav li {
+        font-size: 1.5em
+    }
+    nav li a {
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
+        padding-left: 1.5em;
+        padding-right: 1.5em;
+    }
+
+    nav li a:hover {
+        color: #2a1f14;
+        background-color: #f6eee4
+    }
+
+    }
+/*Desktop Viewport: Style rules for main content*/
+    #info ul {
+        margin-left: 5%;
+    }
+}
+
+/*Media Query for Large Desktop*/
+@media screen and (min-width:1921px) {
+    
+ /*Large Desktop: Style rules for main content*/
+    body {
+         background: linear-gradient( #f6eee4, #78593a);
+    }
+    
+    #wrapper {
+        width: 1920px;
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    main {
+        background-color: #f6eee4;
+    }
+}
+/*Media Query for print*/
+@media print {
+    
+    body {
+        background-color: #fff;
+        color: #000;
+    }
 }
